celery_redis_prometheus changes
===============================

1.3.0 (unreleased)
------------------

- Add `queue` label to `celery_tasks_total` metric


1.2.0 (2022-06-23)
------------------

- Update to celery-5.x


1.1.1 (2020-03-20)
------------------

- Fix py2 class syntax issues


1.1.0 (2020-03-20)
------------------

- Make py2 compatible.


1.0.0 (2020-03-20)
------------------

- Initial release